3130 new semester script setup

--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: CS 3130 Spring 2023
+title: CS 3130 Fall 2023
 author: Charles Reiss
 email: creiss@virginia.edu
-baseurl: "/~cr4bd/3130/S2023" # the subpath of your site, e.g. /blog
+baseurl: "/~cr4bd/3130/F2023" # the subpath of your site, e.g. /blog
 url: "https://www.cs.virginia.edu" # the base hostname & protocol for your site, e.g. http://example.com
 
 #plugins:
@@ -48,10 +48,10 @@ exclude:
   - Gemfile
   - Gemfile.lock
 
-destination: /u/cr4bd/public_html/3130/S2023
-submit_site: "https://kytos02.cs.virginia.edu/cs3130-spring2023/"
-quiz_site: "https://kytos02.cs.virginia.edu/cs3130-spring2023/quizzes/"
-ohq_site: "https://kytos02.cs.virginia.edu/cs3130-spring2023/ohq/"
+destination: /u/cr4bd/public_html/3130/F2023
+submit_site: "https://kytos02.cs.virginia.edu/cs3130-fall2023/"
+quiz_site: "https://kytos02.cs.virginia.edu/cs3130-fall2023/quizzes/"
+ohq_site: "https://kytos02.cs.virginia.edu/cs3130-fall2023/ohq/"
 kytos: "kytos02.cs.virginia.edu"
 katex: "https://www.cs.virginia.edu/~cr4bd/katex"
 
