--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -81,6 +81,9 @@
        *  in-memory lookup example
        *  as a tree (start)
 
+- date: 2023-09-08
+  week: 3
+
 - date: 2023-09-12
   week: 4
   title: virtual memory 3
@@ -221,6 +224,9 @@
     *  file descriptors
     *  pipe and dup2
 
+- date: 2023-10-13
+  week: 8
+
 - date: 2023-10-17
   week: 9
   title: threads 1 / synchronization 1
@@ -314,10 +320,10 @@
 
 - date: 2023-11-08
   lab: true
-  week: 13
+  week: 12
 
 - date: 2023-11-09
-  week: 13
+  week: 12
   reading: "[processors](readings/procesors.html) §2-3, [buses](readings/buses.html)"
   title: branch prediction
   description: |
@@ -328,8 +334,11 @@
        *  forward-taken, backwards-not-taken
        *  using history
 
+- date: 2023-11-10
+  week: 12
+
 - date: 2023-11-14
-  week: 14
+  week: 13
   title: buses / out-of-order 1
   description: |
     *  interlude: buses and direct-memory access
@@ -342,10 +351,10 @@
 
 - date: 2023-11-15
   lab: true
-  week: 14
+  week: 13
 
 - date: 2023-11-16
-  week: 14
+  week: 13
   title: out-of-order 2 / side channels
   description: |
     *  instruction queues (finish)
@@ -354,8 +363,11 @@
     *  side channels generally
     *  side channels in the cache (start)
 
+- date: 2023-11-17
+  week: 13
+
 - date: 2023-11-21
-  week: 15
+  week: 14
   title: meltdown, spectre, etc.
   description: |
     *  side channels in the cache (finish)
@@ -366,11 +378,11 @@
         *   using cache side-channels
 
 - date: 2023-11-22
-  week: 15
+  week: 14
   no_class: true
 
 - date: 2023-11-23
-  week: 15
+  week: 14
   no_class: true
 
 - date: 2023-11-28
