add final to schedule

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -421,3 +421,8 @@
   week: 16
   title: Exam Review
 
+- date: 2023-12-14
+  week: 17
+  title: Final Exam
+  description: |
+    Scheduled time: 9am-12pm Thursday 14 December
