--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -116,6 +116,9 @@
 - date: 2023-09-14
   week: 4
   title: IP + connection abstraction
+  slides: yes
+  sldies_prelim: yes
+  slides_extra: yes
   reading: "[protocols](readings/protocols.html) §1-2"
   description: |
     *  mailbox analogy
